# AlphaImpute2

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  MIT_License.txt  README.md  build_pipeline.sh  conftest.py  peeling_notes.md  pyproject.toml  setup.py  tinyImpute.py  tinyhouse
.github/workflows/: publish.yml  tests.yml
Imputation/: HeuristicBWImpute.py  Imputation_Programs.py  PedigreeImputation.py  PopImpute.py  ProbPhasing.py
docs/source/: conf.py  index.rst
example/: check_accuracy.r  genotypes.txt  runScript.sh  run_script.sh
example/data/: genotypes.txt  pedigree.txt  trueGenotypes.txt  true_genotypes.txt
example/outputs/: out.genotypes  out.phase
src/: alphaimpute2-script.py  tinyImpute-script.py
src/alphaimpute2/: alphaimpute2.py  tinyImpute.py  version.py
src/alphaimpute2/Imputation/: ArrayClustering.py  BurrowsWheelerLibrary.py  FamilyParentPhasing.py  FamilyParentPhasing_old.py  HeuristicBWImpute.py  Heuristic_Peel_Up.py  Heuristic_Peeling.py  Heuristic_Peeling_Careful.py  Imputation.py  ImputationIndividual.py  Imputation_Programs.py  ParticleImputation.py  ParticlePhasing.py  PedigreeImputation.py  PhasingObjects.py  PopImpute.py  ProbPhasing.py  RecombEstimation.py  Recomb_estimation.py  hap_merging.py  tmp_merging.py  version.py
tests/: run_test.py
tests/accuracy_tests/: accu_report.txt  run_accu_test.py  simulation_parameters.txt
tests/accuracy_tests/sim_for_alphapeel_accu_test/: pedigree.txt  (+5 more)
tests/functional_tests/: run_func_test.py
tests/test_one/: genotypes.txt  pedigree.txt  true_genotypes.txt
(+4 files in other folders)
